2005-10-27  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/activitynodes.py: object node has upper bound
	specification; join node has join specification; initial node naming
	reimplemented with text element and grouping
	* gaphor/diagram/flow.py: flow has name and guard implemented with text
	element (since now flows can have names)
	* gaphor/diagram/nameditem.py: added sided named elements base class
	and text element class
	* gaphor/diagram/groupable.py: added basic class for grouping different
	diagram items

2005-10-26  wrobell <wrobell@pld-linux.org>
	* gaphor/UML/uml2.gaphor: added control nodes diagram from complete
	activities

2005-10-25 Arjan Molenaar  <arjanmolenaar@hetnet.nl>
	* gaphor/UML/uml2.gaphor: added TaggedValue class in Expressions
	diagram.

2005-10-24  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/flow.py: forbid flow source to connect to final node;
	forbid flow target to connect to initial nodes

2005-10-24 Arjan Molenaar  <arjanmolenaar@hetnet.nl>
	* setup.py: bumped version to 0.7.2, since data model has undergone some
	changes.
	* gaphor/UML/uml2.gaphor: added taggedValue to NamedElement as 0..*.
	* gaphor/storage.py, gaphor/UML/umllex.py,
	gaphor/diagram/association.py, gaphor/diagram/attribute.py,
	gaphor/diagram/diagramline.py, gaphor/diagram/operation.py:
	Changed to support NamedElement.taggedValue[*].
	* utils/genUML2.py: parse new taggedValues properly.

2005-10-24  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/util.py: added functions which
		- determine subject's class of fork and decision UI elements
		- combine or decombine fork/join and decision/merge nodes in case
		  of many incoming and outgoig flows
	* gaphor/diagram/activitynodes.py: store information about combined
	fork/decision nodes; support for ordering of object nodes
	* gaphor/diagram/flow.py: determine fork/decision node subject's class
	and/or combine/decombine nodes according to UML specs