@@ -371,7 +371,18 @@ setup(name='gaphor',
                 'gaphor.UML',
                 'gaphor.diagram',
                 'gaphor.ui',
-                'gaphor.misc'
+                'gaphor.misc',
+                'zope',
+                'zope.interface',
+                'zope.component.bbb',
+                'zope.component.bbb.tests',
+                'zope.interface.common',
+                'zope.component',
+                'zope.exceptions',
+                'zope.proxy',
+                'zope.deprecation',
+                'zope.testing',
+                
       ],
 #      ext_modules=ext_modules,
       # data files are relative to <prefix>/share/gaphor (see setup.cfg)
